@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/13 02:13:40 brook Exp $
+
+SHA1 (tex-chemfig-51176/chemfig.tar.xz) = 059aa48e7a4c9f40cbdd28f43ecd0ba3c2c17d2c
+RMD160 (tex-chemfig-51176/chemfig.tar.xz) = b6ebfb70cf26caeafcb2e8453585d4748206f2cf
+SHA512 (tex-chemfig-51176/chemfig.tar.xz) = bf8b9f313bdc239eac7c11c8b887755fc5106c389b3d62f013c764a8392298f4e0074796ec128edaa0d4126b52b055b3787454885dd2cd214e2603b7896b28dd
+Size (tex-chemfig-51176/chemfig.tar.xz) = 23716 bytes
